--- a/view/index.html
+++ b/view/index.html
@@ -7,8 +7,11 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>SNAKE</h1>
-    <div class=".playButton">Play</div>
+    <h1>Snake</h1>
+    <div class="playButton">
+        <a href="game.html" id="startBtn">Play</a>
+    
+    </div>
 
     
     
