countdown und frontend ghame

--- a/view/game.html
+++ b/view/game.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-<body>
-    <canvas height="600" width="400"></canvas>
+<body id="gameBody">
+    <h1>Game</h1>
+    <div id="score">Score: 0</div>
+    <canvas height="500" width="800" id="canvas"></canvas>
+
+    <div id="countdown">
+        3
+    </div>
+
     <script src="../main.js"></script>
 </body>
 </html>
