--- a/view/index.html
+++ b/view/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Snake</h1>
     <div class="playButton">
-        <a href="game.html" id="startBtn">Play</a>
+        <a href="game.html" id="startBtn" onclick="timerStart()">Play</a>
     </div>
 
     
