--- a/view/styles.css
+++ b/view/styles.css
@@ -25,9 +25,9 @@ h1{
     background-color: rgb(2, 136, 0);
     cursor: pointer;
     background-image: url("images/snake.png");
-    background-size:cover;        /* füllt den Bildschirm */
-    background-position: center;   /* zentriert */
-    background-repeat: no-repeat;  /* nicht kacheln */ 
+    background-size:cover;        
+    background-position: center;   
+    background-repeat: no-repeat;  
     color: white;
 }
 
@@ -37,4 +37,35 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+#canvas{
+    width: 100%;
+    border: 2px solid white;
+}
+
+#gameBody{
+    padding: 20px 50px 0 50px;
+}
+
+#score{
+    color: white;
+    align-items:left;
+    width: 100%;
+    margin-bottom: 1%;
+    font-size: 20px;
+    
+}
+
+#countdown {
+    position: absolute;          
+    top: 50%;                    
+    left: 50%;                  
+    transform: translate(-50%, -50%); 
+    font-size: 300px;           
+    font-weight: bold;
+    color: white;
+    z-index: 100;                
+    pointer-events: none;        
+    text-shadow: 2px 2px 10px black; 
 }
