--- a/view/game.html
+++ b/view/game.html
@@ -9,7 +9,7 @@
 <body id="gameBody">
     <h1>Game</h1>
     <div id="score">Score: 0</div>
-    <canvas height="500" width="800" id="canvas"></canvas>
+    <canvas height="500" width="800" id="board"></canvas>
 
     <div id="countdown">
         3
