--- a/view/game.html
+++ b/view/game.html
@@ -9,12 +9,11 @@
 <body id="gameBody">
     <h1>Game</h1>
     <div id="score">Score: 0</div>
-    <canvas height="500" width="800" id="board"></canvas>
 
-    <div id="countdown">
-        3
+    <div id="canvasWrapper">
+        <canvas id="board" width="800" height="500"></canvas>
+        <div id="countdown">3</div>
     </div>
-
     <script src="../main.js"></script>
 </body>
 </html>
