--- a/view/styles.css
+++ b/view/styles.css
@@ -21,6 +21,16 @@ h1{
     
 }
 
+#lastScore{
+    text-align: center;
+    width: 96%;
+    padding: 2%;
+    text-decoration: none;   
+    color: white;
+    font-size: 30px;
+
+}
+
 .playButton:hover #startBtn {
     background-color: rgb(2, 136, 0);
     cursor: pointer;
@@ -46,11 +56,15 @@ body {
 
 #gameBody{
     padding: 20px 50px 0 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 #score{
     color: white;
-    align-items:left;
+    align-items:center;
+    text-align: center;
     width: 100%;
     margin-bottom: 1%;
     font-size: 20px;
